syntax = "proto3";
package blob.v1;
option go_package = "/ccmose/service/blob/api;blobpb";

enum Operation_Status {
  DEFAULT = 0;
  DOWNLOAD = 1;
  UPLOAD = 2;
}

message CreateUrlRequest{
  string path = 1;
  Operation_Status operation = 2;
}

message CreateUrlResponse{
  string url = 1;
}

service BlobService{
  rpc CreateUrl(CreateUrlRequest) returns (CreateUrlResponse){}
}