syntax = "proto3";
package blob.v1;
option go_package = "/ccmose/service/blob/api;profilepb";

message Request{
  bool end = 2;
  int64 second = 3;
}

message Response{
  string code = 1;
}

service ProfileService{
  rpc GetProfile(Request) returns (Response){}
}